[project]
name = "listen-you-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "aioboto3>=14.3.0",
    "dotenv>=0.9.9",
    "langchain>=0.3.25",
    "langchain-aws<0.2.24",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.62",
    "langchain-openai>=0.3.18",
    "langchain-tavily>=0.2.0",
    "langgraph>=0.4.7",
    "langgraph-checkpoint-amazon-dynamodb>=0.1.2",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
